<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">demo</string>

    <!-- 底部导航栏-->
    <string name="title_home">首页</string>
    <string name="title_basiness_hall">网上营业厅</string>
    <string name="title_line">在线客服</string>
    <string name="title_personal">个人中心</string>

    <!-- 网络状态异常 -->
    <string name="net_error_str">网络状态异常……</string>

    <!-- 无数据-->
    <string name="data_null_str">暂无数据……</string>

    <!-- 登录 -->
    <string name="login_username">手机号</string>
    <string name="login_userpwd">密码</string>
    <string name="login_btn_title">登录</string>
    <string name="login_btn_notice">注册</string>
    <string name="login_btn_forget">忘记密码</string>
    <string name="login_btn_auto_login">自动登录</string>
    <string name="login_btn_remember">记住密码</string>

    <!-- 找回密码 -->
    <string name="find_return_code">获取验证码</string>
    <string name="find_return_code_over">验证码已发送</string>
    <string name="find_next_step">下一步</string>
    <string name="find_title">找回密码</string>
    <string name="find_next_phone">请输入至少8位字母、数字组合密码</string>
    <string name="find_next_code">请再次输入密码</string>
    <string name="find_btn_over">完成</string>

    <!-- 注册 -->
    <string name="register_name">请输入您的手机号作为用户名</string>
    <string name="register_name_real">请输入您的姓名</string>
    <string name="register_code">请输入验证码</string>
    <string name="register_OK">恭喜您! 注册成功！</string>
    <string name="register_insert_index">进入首页</string>

    <!-- 个人中心 -->
    <string name="single_title_mine">我的信息</string>
    <string name="single_title_charge">缴费记录</string>
    <string name="single_title_fix_recode">故障报修记录</string>
    <string name="single_title_up_recode">投诉举报记录</string>
    <string name="single_title_change_pwd">修改密码</string>
    <string name="single_title_login_out">注销登录</string>


</resources>
