<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C8E7F2">

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="216dp">

        <EditText

            android:id="@+id/login_uname"
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="156px"
            android:layout_marginRight="156px"
            android:background="@drawable/login_round_shape"
            android:cursorVisible="true"
            android:drawableLeft="@drawable/ic_account_circle_ccc_24dp"
            android:drawablePadding="20px"
            android:hint="@string/login_username"
            android:inputType="phone"
            android:paddingLeft="24px"
            android:textSize="40px"/>

        <EditText
            android:id="@+id/login_upwd"
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"

            android:layout_marginLeft="156px"
            android:layout_marginRight="156px"
            android:layout_marginTop="147px"
            android:background="@drawable/login_round_shape_bottom"
            android:cursorVisible="true"
            android:drawableLeft="@drawable/ic_lock_open_ccc_24dp"
            android:drawablePadding="20px"
            android:hint="@string/login_userpwd"
            android:inputType="numberPassword"
            android:paddingLeft="24px"
            android:textSize="40px"/>

        <CheckBox
            android:id="@+id/pwd_visible"
            android:layout_width="56px"
            android:layout_height="56px"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/login_uname"
            android:layout_marginRight="186px"
            android:layout_marginTop="40px"
            android:background="@drawable/login_visible_state_selector"
            android:button="@null"/>
    </com.zhy.autolayout.AutoRelativeLayout>

    <CheckBox
        android:id="@+id/checkBox_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/login_btn"
        android:layout_below="@+id/relative_layout"
        android:layout_marginTop="20px"
        android:text="@string/login_btn_remember"
        android:textColor="?android:attr/textColorSecondary"/>

    <CheckBox
        android:id="@+id/checkBox_auto_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox_remember"
        android:layout_alignBottom="@+id/checkBox_remember"
        android:layout_alignEnd="@+id/login_btn"
        android:text="@string/login_btn_auto_login"
        android:textColor="?android:attr/textColorSecondary"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:layout_below="@id/checkBox_remember"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="156px"
        android:layout_marginRight="156px"
        android:layout_marginTop="96px"
        android:background="@drawable/login_button_style"
        android:onClick="onViewClicked"
        android:text="@string/login_btn_title"
        android:textColor="@color/button_text_color"
        android:textSize="42px"/>

    <TextView
        android:id="@+id/login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/login_btn"
        android:layout_alignTop="@+id/login_forget"
        android:layout_marginEnd="9dp"
        android:layout_marginTop="6dp"
        android:clickable="true"
        android:onClick="onViewClicked"
        android:text="@string/login_btn_notice"
        android:textColor="@color/colorPrimary"
        android:textSize="42px"/>

    <TextView
        android:id="@+id/login_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/login_btn"
        android:layout_below="@+id/login_btn"
        android:layout_marginTop="37dp"
        android:clickable="true"
        android:onClick="onViewClicked"
        android:text="@string/login_btn_forget"
        android:textColor="@color/colorPrimary"
        android:textSize="42px"/>


</com.zhy.autolayout.AutoRelativeLayout>